Added Logo and style.css

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <div class="row">
                 <div class="col-2">
                     <div class="fill-logo">
-                        <img/>
+                        <img src="GGHB.png"/>
                     </div>
                 </div>
                 <div class="col-6 header-filling"></div>
                 <div class="col-4">
                     <div class="nav">
-                        <div class="col-1">
+                        <div class="col-2">
                             <a href="a">Home</a>
                         </div>
-                        <div class="col-1">
+                        <div class="col-3">
                             <a href="a">Build With Us</a>
                         </div>
-                        <div class="col-1">
+                        <div class="col-2">
                             <a href="a">Contact</a>
                         </div>
                     </div>
