--- a/index.html
+++ b/index.html
@@ -17,26 +17,21 @@
     <body>
         <div class="left-stack"></div>
         <header>
-            <div class="row">
-                <div class="col-2">
+            <div class="header-nav">
+                <div class="col-1"></div>
                     <div class="fill-logo">
-                        <img src="GGHB.png"/>
+                        <a href="index.html">
+                            <img src="GGHB.png"/>
+                        </a>
+                        
                     </div>
-                </div>
-                <div class="col-6 header-filling"></div>
-                <div class="col-4">
-                    <div class="nav">
-                        <div class="col-2">
-                            <a href="a">Home</a>
-                        </div>
-                        <div class="col-3">
-                            <a href="a">Build With Us</a>
-                        </div>
-                        <div class="col-2">
-                            <a href="a">Contact</a>
-                        </div>
+                <div class="header-filling"></div>
+                    <div class="conte">
+                            <a class="nav-link" href="/Home">HOME</a>
+                            <a class="nav-link" href="/Build">BUILD WITH US</a>
+                            <a class="nav-link" href="/Contact">CONTACT</a>
                     </div>
-                </div>
+                <div class="col-1"></div>
             </div>
         </header>
         <div class="right-stack"></div>
