added images and first row

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     </head>
     <body>
-        <div class="left-stack"></div>
         <header>
             <div class="header-nav">
                 <div class="col-1"></div>
@@ -34,6 +33,24 @@
                 <div class="col-1"></div>
             </div>
         </header>
-        <div class="right-stack"></div>
+        <div class="body-row">
+            <div class="row-1-body">
+                <div class="rep-row">
+                    <img class="row-img" src="1_401-a-1.png" />
+                    <p class="p-rows">LANDERS RESIDENCE</p>
+                </div>
+                <div class="rep-row">
+                    <img class="row-img" src="2_401-1.png" />
+                    <p class="p-rows">LANDERS RESIDENCE</p>
+                </div>
+                <div class="rep-row">
+                    <img class="row-img" src="67_401-1.png" />
+                    <p class="p-rows">LANDERS RESIDENCE</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
     </body>
 </html>
