--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <header>
             <div class="header-nav">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                     <div class="fill-logo">
                         <a href="index.html">
                             <img src="GGHB.png"/>
@@ -30,22 +30,36 @@
                             <a class="nav-link" href="/Build">BUILD WITH US</a>
                             <a class="nav-link" href="/Contact">CONTACT</a>
                     </div>
-                <div class="col-1"></div>
+                <div class="col-2"></div>
             </div>
         </header>
         <div class="body-row">
             <div class="row-1-body">
                 <div class="rep-row">
-                    <img class="row-img" src="1_401-a-1.png" />
+                    <img class="row-img" src="1_401-a-1.png" onmouseover="this.src='1_401_ a.jpg';" onmouseout="this.src='1_401-a-1.png'" />
                     <p class="p-rows">LANDERS RESIDENCE</p>
                 </div>
-                <div class="rep-row">
-                    <img class="row-img" src="2_401-1.png" />
-                    <p class="p-rows">LANDERS RESIDENCE</p>
+                <div class="rep-row2">
+                    <img class="row-img" src="2_401-1.png" onmouseover="this.src='2_401 1.png';" onmouseout="this.src='2_401-1.png'"/>
+                    <p class="p-rows">LANIERS RESIDENCE</p>
                 </div>
                 <div class="rep-row">
-                    <img class="row-img" src="67_401-1.png" />
+                    <img class="row-img" src="67_401-1.png" onmouseover="this.src='67_401 1.png';" onmouseout="this.src='67_401-1.png'"/>
+                    <p class="p-rows">HUSKINS RESIDENCE</p>
+                </div>
+            </div>
+            <div class="row-1-body">
+                <div class="rep-row">
+                    <img class="row-img" src="e-1.png" onmouseover="this.src='e 1.png';" onmouseout="this.src='e-1.png'" />
                     <p class="p-rows">LANDERS RESIDENCE</p>
+                </div>
+                <div class="rep-row2">
+                    <img class="row-img" src="z-1.png" onmouseover="this.src='z 1.png';" onmouseout="this.src='z-1.png'"/>
+                    <p class="p-rows">LANIERS RESIDENCE</p>
+                </div>
+                <div class="rep-row">
+                    <img class="row-img" src="f-1.png" onmouseover="this.src='f 1.png';" onmouseout="this.src='f-1.png'"/>
+                    <p class="p-rows">HUSKINS RESIDENCE</p>
                 </div>
             </div>
         </div>
