Made everything shrinkable to the first part

--- a/index.html
+++ b/index.html
@@ -15,56 +15,58 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     </head>
     <body>
-        <header>
-            <div class="header-nav">
-                <div class="col-2"></div>
+        <div class="bodyy">
+            <div class="body-cont">
+                <header class="header-nav">
                     <div class="fill-logo">
                         <a href="index.html">
                             <img src="GGHB.png"/>
-                        </a>
-                        
+                        </a> 
                     </div>
-                <div class="header-filling"></div>
-                    <div class="conte">
+                    <div class="nav-full-cont">
+                        <div class="conte">
                             <a class="nav-link" href="/Home">HOME</a>
                             <a class="nav-link" href="/Build">BUILD WITH US</a>
-                            <a class="nav-link" href="/Contact">CONTACT</a>
+                            <a class="nav-link p-nav-contact" href="/Contact">CONTACT</a>
+                        </div>
                     </div>
-                <div class="col-2"></div>
+                </header>
+                <div class="body-row">
+                    <div class="row-1-body">
+                        <div class="rep-row">
+                            <div class="rep-img-row">
+                                <img class="row-img" src="1_401-a-1.png" onmouseover="this.src='1_401_ a.jpg';" onmouseout="this.src='1_401-a-1.png'" />
+                            </div>
+                            <p class="p-rows">LANDERS RESIDENCE</p>
+                        </div>
+                        <div class="rep-row">
+                            <img class="row-img" src="2_401-1.png" onmouseover="this.src='2_401 1.png';" onmouseout="this.src='2_401-1.png'"/>
+                            <p class="p-rows">LANIERS RESIDENCE</p>
+                        </div>
+                        <div class="rep-row">
+                            <img class="row-img" src="67_401-1.png" onmouseover="this.src='67_401 1.png';" onmouseout="this.src='67_401-1.png'"/>
+                            <p class="p-rows">HUSKINS RESIDENCE</p>
+                        </div>
+                    </div>
+                    <div class="row-1-body">
+                        <div class="rep-row">
+                            <img class="row-img" src="e-1.png" onmouseover="this.src='e 1.png';" onmouseout="this.src='e-1.png'" />
+                            <p class="p-rows">LANDERS RESIDENCE</p>
+                        </div>
+                        <div class="rep-row">
+                            <img class="row-img" src="z-1.png" onmouseover="this.src='z 1.png';" onmouseout="this.src='z-1.png'"/>
+                            <p class="p-rows">LANIERS RESIDENCE</p>
+                        </div>
+                        <div class="rep-row">
+                            <img class="row-img" src="f-1.png" onmouseover="this.src='f 1.png';" onmouseout="this.src='f-1.png'"/>
+                            <p class="p-rows">HUSKINS RESIDENCE</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+    
+                </div>
             </div>
-        </header>
-        <div class="body-row">
-            <div class="row-1-body">
-                <div class="rep-row">
-                    <img class="row-img" src="1_401-a-1.png" onmouseover="this.src='1_401_ a.jpg';" onmouseout="this.src='1_401-a-1.png'" />
-                    <p class="p-rows">LANDERS RESIDENCE</p>
-                </div>
-                <div class="rep-row2">
-                    <img class="row-img" src="2_401-1.png" onmouseover="this.src='2_401 1.png';" onmouseout="this.src='2_401-1.png'"/>
-                    <p class="p-rows">LANIERS RESIDENCE</p>
-                </div>
-                <div class="rep-row">
-                    <img class="row-img" src="67_401-1.png" onmouseover="this.src='67_401 1.png';" onmouseout="this.src='67_401-1.png'"/>
-                    <p class="p-rows">HUSKINS RESIDENCE</p>
-                </div>
-            </div>
-            <div class="row-1-body">
-                <div class="rep-row">
-                    <img class="row-img" src="e-1.png" onmouseover="this.src='e 1.png';" onmouseout="this.src='e-1.png'" />
-                    <p class="p-rows">LANDERS RESIDENCE</p>
-                </div>
-                <div class="rep-row2">
-                    <img class="row-img" src="z-1.png" onmouseover="this.src='z 1.png';" onmouseout="this.src='z-1.png'"/>
-                    <p class="p-rows">LANIERS RESIDENCE</p>
-                </div>
-                <div class="rep-row">
-                    <img class="row-img" src="f-1.png" onmouseover="this.src='f 1.png';" onmouseout="this.src='f-1.png'"/>
-                    <p class="p-rows">HUSKINS RESIDENCE</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-
         </div>
     </body>
 </html>
