first stage of trying to redo the way I have the mlined up so it can have 2 images instead of three whe nI want it

--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
                     </div>
                 </header>
                 <div class="body-row">
-                    <div class="row-1-body">
+                    <!-- <div class="row-1-body"> -->
                         <div class="rep-row">
-                            <div class="rep-img-row">
-                                <img class="row-img" src="1_401-a-1.png" onmouseover="this.src='1_401_ a.jpg';" onmouseout="this.src='1_401-a-1.png'" />
-                            </div>
+                            <img class="row-img" src="1_401-a-1.png" onmouseover="this.src='1_401_ a.jpg';" onmouseout="this.src='1_401-a-1.png'" />
                             <p class="p-rows">LANDERS RESIDENCE</p>
                         </div>
                         <div class="rep-row">
@@ -47,8 +45,8 @@
                             <img class="row-img" src="67_401-1.png" onmouseover="this.src='67_401 1.png';" onmouseout="this.src='67_401-1.png'"/>
                             <p class="p-rows">HUSKINS RESIDENCE</p>
                         </div>
-                    </div>
-                    <div class="row-1-body">
+                    <!-- </div>
+                    <div class="row-1-body"> -->
                         <div class="rep-row">
                             <img class="row-img" src="e-1.png" onmouseover="this.src='e 1.png';" onmouseout="this.src='e-1.png'" />
                             <p class="p-rows">LANDERS RESIDENCE</p>
@@ -61,7 +59,7 @@
                             <img class="row-img" src="f-1.png" onmouseover="this.src='f 1.png';" onmouseout="this.src='f-1.png'"/>
                             <p class="p-rows">HUSKINS RESIDENCE</p>
                         </div>
-                    </div>
+                    <!-- </div> -->
                 </div>
                 <div class="row">
     
