fixed the 2 rows but still haven't made the 2 images per row once it gets smaller

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </header>
                 <div class="body-row">
-                    <!-- <div class="row-1-body"> -->
+                    <div class="row-1-body">
                         <div class="rep-row">
                             <img class="row-img" src="1_401-a-1.png" onmouseover="this.src='1_401_ a.jpg';" onmouseout="this.src='1_401-a-1.png'" />
                             <p class="p-rows">LANDERS RESIDENCE</p>
@@ -59,7 +59,7 @@
                             <img class="row-img" src="f-1.png" onmouseover="this.src='f 1.png';" onmouseout="this.src='f-1.png'"/>
                             <p class="p-rows">HUSKINS RESIDENCE</p>
                         </div>
-                    <!-- </div> -->
+                    </div>
                 </div>
                 <div class="row">
     
